force-app/main/default/objects/Lead/fields/Accredited_Investor__c.field-meta.xml
<CustomField>
    <fullName>Accredited_Investor__c</fullName>
    <label>Accredited Investor</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>