force-app/main/default/objects/Lead/fields/Anticipated_Yield_Investment_Date__c.field-meta.xml
<CustomField>
    <fullName>Anticipated_Yield_Investment_Date__c</fullName>
    <label>Anticipated Yield Investment Date</label>
    <type>Date</type>
</CustomField>