force-app/main/default/objects/Lead/fields/Auth_rep_test__c.field-meta.xml
<CustomField>
    <fullName>Auth_rep_test__c</fullName>
    <label>Auth rep (test)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>