force-app/main/default/objects/Lead/fields/Authorized_Representative__c.field-meta.xml
<CustomField>
    <fullName>Authorized_Representative__c</fullName>
    <label>Authorized Representative</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>