force-app/main/default/objects/Lead/fields/Auto_Convert__c.field-meta.xml
<CustomField>
    <fullName>Auto_Convert__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked this will trigger automation to auto convert a lead</description>
    <label>Auto Convert</label>
    <type>Checkbox</type>
</CustomField>