force-app/main/default/objects/Lead/fields/Became_a_Marketing_Qualified_Lead_Date__c.field-meta.xml
<CustomField>
    <fullName>Became_a_Marketing_Qualified_Lead_Date__c</fullName>
    <label>Became a Marketing Qualified Lead Date</label>
    <type>Date</type>
</CustomField>