force-app/main/default/objects/Lead/fields/Blockchain_Info__c.field-meta.xml
<CustomField>
    <fullName>Blockchain_Info__c</fullName>
    <label>Blockchain Info</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Stellar</fullName>
            </value>
            <value>
                <fullName>Solana</fullName>
            </value>
            <value>
                <fullName>Hedera</fullName>
            </value>
            <value>
                <fullName>TRON</fullName>
            </value>
            <value>
                <fullName>Algorand</fullName>
            </value>
            <value>
                <fullName>Ethereum</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>