force-app/main/default/objects/Lead/fields/Blockchain_Info_Details__c.field-meta.xml
<CustomField>
    <fullName>Blockchain_Info_Details__c</fullName>
    <label>Blockchain Info Details</label>
    <type>TextArea</type>
</CustomField>