force-app/main/default/objects/Lead/fields/Booking_Status_CP__c.field-meta.xml
<CustomField>
    <fullName>Booking_Status_CP__c</fullName>
    <label>Most Recent Booking Status CP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>