force-app/main/default/objects/Lead/fields/Business_Description__c.field-meta.xml
<CustomField>
    <fullName>Business_Description__c</fullName>
    <label>Business Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>