force-app/main/default/objects/Lead/fields/Business_Development_Lead__c.field-meta.xml
<CustomField>
    <fullName>Business_Development_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Business Development Lead</label>
    <type>Checkbox</type>
</CustomField>