force-app/main/default/objects/Lead/fields/Business_Development_Owner__c.field-meta.xml
<CustomField>
    <fullName>Business_Development_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Development Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Leads7</relationshipName>
    <type>Lookup</type>
</CustomField>