force-app/main/default/objects/Lead/fields/Business_Development_Owner_Meeting_Link__c.field-meta.xml
<CustomField>
    <fullName>Business_Development_Owner_Meeting_Link__c</fullName>
    <description>This is used to get the text value to display in Salesloft</description>
    <formula>Business_Development_Owner__r.Meeting_Link__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Development Owner Meeting Link</label>
    <type>Text</type>
</CustomField>