force-app/main/default/objects/Lead/fields/Business_Development_Owner_text__c.field-meta.xml
<CustomField>
    <fullName>Business_Development_Owner_text__c</fullName>
    <description>This is used to get the text value to display in Salesloft</description>
    <formula>Business_Development_Owner__r.FirstName +&quot; &quot;+ Business_Development_Owner__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Development Owner (text)</label>
    <type>Text</type>
</CustomField>