force-app/main/default/objects/Lead/fields/Business_Segment__c.field-meta.xml
<CustomField>
    <fullName>Business_Segment__c</fullName>
    <label>Business Segment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Crypto Finance Application</fullName>
            </value>
            <value>
                <fullName>Blockchain Networks &amp; Protocols</fullName>
            </value>
            <value>
                <fullName>Institutional Trader</fullName>
            </value>
            <value>
                <fullName>Trading Firm</fullName>
            </value>
            <value>
                <fullName>Bank</fullName>
            </value>
            <value>
                <fullName>eCommerce</fullName>
            </value>
            <value>
                <fullName>Something else</fullName>
            </value>
            <value>
                <fullName>Crypto Commerce</fullName>
            </value>
            <value>
                <fullName>Crypto Finance</fullName>
            </value>
            <value>
                <fullName>Retail, Gaming &amp; Entertainment (B2C)</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Fintechs</fullName>
            </value>
            <value>
                <fullName>Financial Services</fullName>
            </value>
            <value>
                <fullName>Institutional Trading</fullName>
            </value>
            <value>
                <fullName>Technology</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>