force-app/main/default/objects/Lead/fields/CeFi_Pre_Qualified_by_Sales_Date__c.field-meta.xml
<CustomField>
    <fullName>CeFi_Pre_Qualified_by_Sales_Date__c</fullName>
    <label>CeFi Pre Qualified by Sales Date</label>
    <type>Date</type>
</CustomField>