force-app/main/default/objects/Lead/fields/CeFi_Yield_App_Signed_Date__c.field-meta.xml
<CustomField>
    <fullName>CeFi_Yield_App_Signed_Date__c</fullName>
    <label>CeFi Yield App Signed Date</label>
    <type>Date</type>
</CustomField>