force-app/main/default/objects/Lead/fields/Circle_Account_Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>Circle_Account_Approved_Date__c</fullName>
    <label>Circle Account Approved Date</label>
    <type>Date</type>
</CustomField>