force-app/main/default/objects/Lead/fields/Circle_Customer_ID__c.field-meta.xml
<CustomField>
    <fullName>Circle_Customer_ID__c</fullName>
    <label>Circle Customer ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>