force-app/main/default/objects/Lead/fields/Circle_Ventures_Form_Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>Circle_Ventures_Form_Submitted_Date__c</fullName>
    <description>Date of most recent Circle Ventures form submission</description>
    <inlineHelpText>Date of most recent Circle Ventures form submission</inlineHelpText>
    <label>Circle Ventures Form Submitted Date</label>
    <type>Date</type>
</CustomField>