force-app/main/default/objects/Lead/fields/Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>Contact_ID__c</fullName>
    <label>Contact ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>