force-app/main/default/objects/Lead/fields/Customer_s_Comment__c.field-meta.xml
<CustomField>
    <fullName>Customer_s_Comment__c</fullName>
    <label>Customer&apos;s Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>