force-app/main/default/objects/Lead/fields/CV_Pitch_Deck__c.field-meta.xml
<CustomField>
    <fullName>CV_Pitch_Deck__c</fullName>
    <description>Used to house the pitch deck submitted by Circle Ventures form submissions</description>
    <inlineHelpText>Used to house the pitch deck submitted by Circle Ventures form submissions</inlineHelpText>
    <label>CV Pitch Deck</label>
    <type>Url</type>
</CustomField>