force-app/main/default/objects/Lead/fields/Date_of_Business_Dev_Rep_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Business_Dev_Rep_Assignment__c</fullName>
    <label>Date of Business Dev Rep Assignment</label>
    <type>Date</type>
</CustomField>