force-app/main/default/objects/Lead/fields/Date_of_PDR_Owner_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Date_of_PDR_Owner_Assigned__c</fullName>
    <label>Date of PDR Owner Assigned</label>
    <type>Date</type>
</CustomField>