force-app/main/default/objects/Lead/fields/Date_of_Platform_Owner_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Platform_Owner_Assignment__c</fullName>
    <label>Date of Platform Owner Assignment</label>
    <type>Date</type>
</CustomField>