force-app/main/default/objects/Lead/fields/Date_of_Yield_Calculator_Form_Submission__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Yield_Calculator_Form_Submission__c</fullName>
    <label>Date of Yield Calculator Form Submission</label>
    <type>Date</type>
</CustomField>