force-app/main/default/objects/Lead/fields/Date_of_Yield_Rel_Mgr_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Yield_Rel_Mgr_Assignment__c</fullName>
    <label>Date of Yield Rel Mgr Assignment</label>
    <type>Date</type>
</CustomField>