force-app/main/default/objects/Lead/fields/Date_Sandbox_Account_Form_Submission__c.field-meta.xml
<CustomField>
    <fullName>Date_Sandbox_Account_Form_Submission__c</fullName>
    <label>Date Sandbox Account Form Submission</label>
    <type>Date</type>
</CustomField>