force-app/main/default/objects/Lead/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>