force-app/main/default/objects/Lead/fields/Diameter_URL__c.field-meta.xml
<CustomField>
    <fullName>Diameter_URL__c</fullName>
    <label>Diameter - URL</label>
    <type>Url</type>
</CustomField>