force-app/main/default/objects/Lead/fields/Distro_Assigned_CP__c.field-meta.xml
<CustomField>
    <fullName>Distro_Assigned_CP__c</fullName>
    <defaultValue>false</defaultValue>
    <description>for distro assigned records</description>
    <label>Distro Assigned</label>
    <type>Checkbox</type>
</CustomField>