force-app/main/default/objects/Lead/fields/Emails_Bounced__c.field-meta.xml
<CustomField>
    <fullName>Emails_Bounced__c</fullName>
    <label>Emails Bounced</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>