force-app/main/default/objects/Lead/fields/Emails_Clicked__c.field-meta.xml
<CustomField>
    <fullName>Emails_Clicked__c</fullName>
    <label>Emails Clicked</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>