force-app/main/default/objects/Lead/fields/Emails_Replied_To__c.field-meta.xml
<CustomField>
    <fullName>Emails_Replied_To__c</fullName>
    <label>Emails Replied To</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>