force-app/main/default/objects/Lead/fields/Emails_Viewed__c.field-meta.xml
<CustomField>
    <fullName>Emails_Viewed__c</fullName>
    <label>Emails Viewed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>