force-app/main/default/objects/Lead/fields/Enterprise_Sub_Vertical__c.field-meta.xml
<CustomField>
    <fullName>Enterprise_Sub_Vertical__c</fullName>
    <label>Enterprise Sub Vertical</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Enterprise_Sub_Vertical</valueSetName>
    </valueSet>
</CustomField>