force-app/main/default/objects/Lead/fields/Entity_Type_PQ__c.field-meta.xml
<CustomField>
    <fullName>Entity_Type_PQ__c</fullName>
    <label>Entity Type PQ</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>publicCo</fullName>
                <label>Publicly Traded Company</label>
            </value>
            <value>
                <fullName>privateCo</fullName>
                <label>Private company (e.g., LLC, Pvt, Pty, Ltd)</label>
            </value>
            <value>
                <fullName>Trust</fullName>
            </value>
            <value>
                <fullName>Foundation</fullName>
            </value>
            <value>
                <fullName>Partnership</fullName>
            </value>
            <value>
                <fullName>soleTrader</fullName>
                <label>Sole Trader</label>
            </value>
            <value>
                <fullName>associationOrConsortium</fullName>
                <label>Association or Consortium</label>
            </value>
            <value>
                <fullName>coop</fullName>
                <label>Co-operative</label>
            </value>
            <value>
                <fullName>governmentBody</fullName>
                <label>Government Body</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>