force-app/main/default/objects/Lead/fields/EU_Resident__c.field-meta.xml
<CustomField>
    <fullName>EU_Resident__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EU Resident</label>
    <type>Checkbox</type>
</CustomField>