force-app/main/default/objects/Lead/fields/Event_Attendance__c.field-meta.xml
<CustomField>
    <fullName>Event_Attendance__c</fullName>
    <label>Event Attendance</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>2021-06 Coindesk Consensus</fullName>
            </value>
            <value>
                <fullName>Bitcoin Conference Meeting</fullName>
            </value>
            <value>
                <fullName>2021-04 BWG Webinar - Search for Yield in Digital Assets</fullName>
            </value>
            <value>
                <fullName>2021-04 NFT Webinar</fullName>
            </value>
            <value>
                <fullName>2021-04 The Block Webinar - NFTs with Gary V. &amp; Sam Lessin</fullName>
            </value>
            <value>
                <fullName>2021-03 Coindesk Webinar - NFTs &amp; the Next Phase</fullName>
            </value>
            <value>
                <fullName>2021-03 NFT Webinars - Coindesk + The Block</fullName>
            </value>
            <value>
                <fullName>2021-03 BWG Webinar #2 - Treasury Management in the Age of Digital Assets</fullName>
            </value>
            <value>
                <fullName>2021-03 BWG Webinar - Treasury Management in the Age of Digital Assets</fullName>
            </value>
            <value>
                <fullName>2021-02 The Block Webinar #1 - DeFi, CeFi &amp; Stablecoins</fullName>
            </value>
            <value>
                <fullName>2021-02 The Block Webinar #1 - DeFi, CeFi, Dexes</fullName>
            </value>
            <value>
                <fullName>2021-02 The Block Paid Webinar - DEX, DeFi &amp; Capital Markets</fullName>
            </value>
            <value>
                <fullName>2021-01 Paid Webinar - Coindesk - Every Bank Crypto Strategy</fullName>
            </value>
            <value>
                <fullName>2020-06 Paid Webinar - Coindesk - Webinar 1</fullName>
            </value>
            <value>
                <fullName>2020-10 Paid Webinar - Coindesk - Webinar 2</fullName>
            </value>
            <value>
                <fullName>2020-11 Paid Webinar - BWG - Webinar 1</fullName>
            </value>
            <value>
                <fullName>Money Hacks</fullName>
            </value>
            <value>
                <fullName>2021-09 SALT</fullName>
            </value>
            <value>
                <fullName>2021-09 DAS</fullName>
            </value>
            <value>
                <fullName>2021-10 Money 20/20 Las Vegas</fullName>
            </value>
            <value>
                <fullName>2021-11 Solana Breakpoint</fullName>
            </value>
            <value>
                <fullName>2021-11 Coindesk Webinar</fullName>
            </value>
            <value>
                <fullName>2022-01 Coindesk Webinar - DeFi USDC</fullName>
            </value>
            <value>
                <fullName>Avalanche Webinar Blockchain | 2022-02</fullName>
            </value>
            <value>
                <fullName>2022-04 NFT LA Event</fullName>
            </value>
            <value>
                <fullName>Event | DeFi Webinar with Solana and Orca | 2022-04</fullName>
            </value>
            <value>
                <fullName>Event | Circle Account Webinar | 2022-04</fullName>
            </value>
            <value>
                <fullName>Event | Avalanche Summit 2022 | 2022-04</fullName>
            </value>
            <value>
                <fullName>Event | Permissionless 2022 - Booth Visit | 2022-04</fullName>
            </value>
            <value>
                <fullName>2022-04 BTC Miami - Onsite Meeting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>