force-app/main/default/objects/Lead/fields/Example_for_Page_Layout__c.field-meta.xml
<CustomField>
    <fullName>Example_for_Page_Layout__c</fullName>
    <description>Example to be deleted.</description>
    <label>Example for Page Layout</label>
    <length>255</length>
    <type>Text</type>
</CustomField>