force-app/main/default/objects/Lead/fields/Expected_Minting_Volume_Monthly__c.field-meta.xml
<CustomField>
    <fullName>Expected_Minting_Volume_Monthly__c</fullName>
    <label>Expected Minting Volume (Monthly)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Expected_Monthly_Minting_Volume</valueSetName>
    </valueSet>
</CustomField>