force-app/main/default/objects/Lead/fields/Expected_Rails__c.field-meta.xml
<CustomField>
    <fullName>Expected_Rails__c</fullName>
    <label>Expected Rails</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Credit Card // Debit Card</fullName>
            </value>
            <value>
                <fullName>ACH</fullName>
            </value>
            <value>
                <fullName>SEPA</fullName>
            </value>
            <value>
                <fullName>Faster Payments</fullName>
            </value>
            <value>
                <fullName>Wires</fullName>
            </value>
            <value>
                <fullName>Smartphone (i.e. Apple Pay)</fullName>
            </value>
            <value>
                <fullName>On Chain</fullName>
            </value>
            <value>
                <fullName>Core API</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>