force-app/main/default/objects/Lead/fields/Flow_Has_Run__c.field-meta.xml
<CustomField>
    <fullName>Flow_Has_Run__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Flow Has Run</label>
    <type>Checkbox</type>
</CustomField>