force-app/main/default/objects/Lead/fields/Follow_up__c.field-meta.xml
<CustomField>
    <fullName>Follow_up__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Follow up?</label>
    <type>Checkbox</type>
</CustomField>