force-app/main/default/objects/Lead/fields/Geography_Available__c.field-meta.xml
<CustomField>
    <fullName>Geography_Available__c</fullName>
    <label>Geography Available</label>
    <length>255</length>
    <type>Text</type>
</CustomField>