force-app/main/default/objects/Lead/fields/HQ_Country__c.field-meta.xml
<CustomField>
    <fullName>HQ_Country__c</fullName>
    <label>HQ Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>