force-app/main/default/objects/Lead/fields/HQ_State__c.field-meta.xml
<CustomField>
    <fullName>HQ_State__c</fullName>
    <label>HQ State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>